검색 기능 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,12 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/redStone
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
